Making the arrows with the `<details>` tag  look like those used in the treeview
Making the arrows with the `<details>` tag  look like those used in the treeview, resulting in adding the settings in doxygen.css

There were some problems in the output introduced in the comment scanner
- multiple `<summary>` tags were just left there whilst only the first one is relevant for the `<details>` tag, the other `<summary>` tags are just new paragraphs
- the `<summary>` tag should only remain in case we are in inside a `<details>` section, otherwise it is handled as a brief description (here the `<summary>` was already ignored, but now it is not even added).
- the order of the resulting `<p>` tags in the HTML output was not correct for XHTML (the `<summary>` tag  was inside a `<p>` tag, this has been corrected

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -1641,3 +1641,23 @@ u {
 	text-decoration: underline;
 }
 
+details>summary {
+  list-style-type: none;
+}
+
+details > summary::-webkit-details-marker {
+    display: none;
+}
+
+details>summary::before {
+    content: "\25ba";
+    padding-right:4px;
+    font-size: 80%;
+}
+
+details[open]>summary::before {
+    content: "\25bc";
+    padding-right:4px;
+    font-size: 80%;
+}
+
