bug_143388 Explicit documentation should stand out from generated documentation
Implementing to have collapsible sections, with implementation for the `\param`, \tparam`, `\exception` and `\retval` commands.
Adding the new configuration format `enum` with the `list` type, i.e. a multiselect from a fixed list of possibilities.

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -733,6 +733,7 @@ dl.reflist dd {
         padding-left: 0px;
 }
 
+.params summary, .retval summary, .tparams summary, .exception summary,
 .params .paramname, .retval .paramname, .tparams .paramname, .exception .paramname {
         font-weight: bold;
         vertical-align: top;
