The CDATA sections in xml code representation should not be interpreted
The CDATA sections in xml code representation should not be interpreted, but just literally be shown.

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -482,6 +482,10 @@ span.charliteral {
 	color: var(--code-char-literal-color);
 }
 
+span.xmlcdata {
+	color: var(--code-xml-cdata-color);
+}
+
 span.vhdldigit { 
 	color: var(--code-vhdl-digit-color);
 }
