--- a/templates/html/darkmode_settings.css
+++ b/templates/html/darkmode_settings.css
@@ -36,7 +36,9 @@
 
 --icon-background-color: ##40;
 --icon-foreground-color: ##CC;
---icon-doc-image: url('docd.png');
+--icon-doc-image: url('docd.svg');
+--icon-folder-open-image: url('folderopend.svg');
+--icon-folder-closed-image: url('folderclosedd.svg');
 
 /* brief member declaration list */
 --memdecl-background-color: ##0A;
@@ -97,6 +99,7 @@
 --toc-background-color: ##15;
 --toc-border-color: ##24;
 --toc-header-color: ##B0;
+--toc-down-arrow-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10px' width='5px'><text x='0' y='5' font-size='10' fill='grey'>↓</text></svg>");
 
 /** search field */
 --search-background-color: black;
@@ -149,7 +152,7 @@
 
 /** font-family */
 --font-family-normal: Roboto,sans-serif;
---font-family-monospace: monospace,fixed;
+--font-family-monospace: 'JetBrains Mono',Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace,fixed;
 --font-family-nav: 'Lucida Grande',Geneva,Helvetica,Arial,sans-serif;
 --font-family-title: Tahoma,Arial,sans-serif;
 --font-family-toc: Verdana,'DejaVu Sans',Geneva,sans-serif;
