--- a/templates/html/darkmode_settings.css
+++ b/templates/html/darkmode_settings.css
@@ -99,7 +99,7 @@
 --toc-background-color: ##15;
 --toc-border-color: ##24;
 --toc-header-color: ##B0;
---toc-down-arrow-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10px' width='5px'><text x='0' y='5' font-size='10' fill='grey'>↓</text></svg>");
+--toc-down-arrow-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10px' width='5px'><text x='0' y='5' font-size='10' fill='grey'>&%238595;</text></svg>");
 
 /** search field */
 --search-background-color: black;
