--- a/templates/html/lightmode_settings.css
+++ b/templates/html/lightmode_settings.css
@@ -99,7 +99,7 @@
 --toc-background-color: ##F6;
 --toc-border-color: ##DD;
 --toc-header-color: ##60;
---toc-down-arrow-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10px' width='5px' fill='grey'><text x='0' y='5' font-size='10'>↓</text></svg>");
+--toc-down-arrow-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10px' width='5px' fill='grey'><text x='0' y='5' font-size='10'>&%238595;</text></svg>");
 
 /** search field */
 --search-background-color: white;
