Incorrect and redirect links in documentation
Number of incorrect links (changelog)
Permanent redirect of links in documentation (and in the documentation generated from config.xml)
Image names / contents havechanged from png to svg for some "icons" (doxygen_manual.css)

--- a/doc/doxygen_manual.css
+++ b/doc/doxygen_manual.css
@@ -799,7 +799,7 @@ div.directory {
     width: 24px;
     height: 18px;
     margin-bottom: 4px;
-    background-image:url('folderopen.png');
+    background-image:url('folderopen.svg');
     background-position: 0px -4px;
     background-repeat: repeat-y;
     vertical-align:top;
@@ -810,7 +810,7 @@ div.directory {
     width: 24px;
     height: 18px;
     margin-bottom: 4px;
-    background-image:url('folderclosed.png');
+    background-image:url('folderclosed.svg');
     background-position: 0px -4px;
     background-repeat: repeat-y;
     vertical-align:top;
@@ -821,7 +821,7 @@ div.directory {
     width: 24px;
     height: 18px;
     margin-bottom: 4px;
-    background-image:url('doc.png');
+    background-image:url('doc.svg');
     background-position: 0px -4px;
     background-repeat: repeat-y;
     vertical-align:top;
