--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -139,6 +139,10 @@ a.navtab {
 	font-weight: bold;
 }
 
+.tablist a:focus {
+	outline: auto;
+}
+
 div.qindex{
 	text-align: center;
 	width: 100%;
