--- a/templates/html/lightmode_settings.css
+++ b/templates/html/lightmode_settings.css
@@ -142,6 +142,7 @@
 --fragment-lineno-link-bg-color: #D8D8D8;
 --fragment-lineno-link-hover-fg-color: ##60;
 --fragment-lineno-link-hover-bg-color: #C8C8C8;
+--fragment-copy-ok-color: #2EC82E;
 --tooltip-foreground-color: black;
 --tooltip-background-color: white;
 --tooltip-border-color: gray;
