Remove double entries
- remove double entries (based on sonarcloud)
- add some generic font families
- remove remaining tabs (in _sm-dox.sccs)

--- a/doc_internal/doc_internal.css
+++ b/doc_internal/doc_internal.css
@@ -8,7 +8,7 @@ dl.multicol {
         list-style-type: none;
 }
 ul.multicol {
-        font-family: courier;
+        font-family: courier,monospace;
 }
 
 body {
