Make the menu bar stick to the top of the screen when scrolling.
In HTML output when using the following (default) settings
DISABLE_INDEX          = NO
GENERATE_TREEVIEW      = NO
HTML_DYNAMIC_MENUS     = YES

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -1801,3 +1801,17 @@ details[open]>summary::before {
     font-size: 80%;
 }
 
+/* make the dynamic menu sticky */
+#main-nav, div.sm {
+  position: sticky;
+  top: 0px;
+  width: 100%;
+  z-index: 100;
+}
+@media(max-width:768px)
+{
+  #main-nav {
+    top: 36px;
+  }
+}
+
