issue #10475 doxygen does not correctly render link content in MarkDown file

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -210,7 +210,8 @@ a {
 }
 
 a:hover {
-	text-decoration: underline;
+	text-decoration: none;
+	background:   linear-gradient(to bottom, transparent 0,transparent calc(100% - 1px), currentColor 100%);
 }
 
 a.el {
