Make the manual use more modern doxygen output

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -214,6 +214,11 @@ a:hover {
 	background:   linear-gradient(to bottom, transparent 0,transparent calc(100% - 1px), currentColor 100%);
 }
 
+a:hover > span.arrow {
+        text-decoration: none;
+        background : var(--nav-background-color);
+}
+
 a.el {
 	font-weight: bold;
 }
