--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -21,6 +21,7 @@
 <!--BEGIN COPY_CLIPBOARD-->
 <script type="text/javascript" src="$relpath^clipboard.js"></script>
 <!--END COPY_CLIPBOARD-->
+$cookie
 $treeview
 $search
 $mathjax
