issue #11209 `<kbd>` tag gets rewritten as `<code>`
Create the possibility so that the `<kbd>` tag is distinct from the `<code>` tag and user has the possibility to render the `<kbd>` tag in a way the user likes. and that it is n

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -1807,11 +1807,11 @@ th.markdownTableHeadCenter, td.markdownTableBodyCenter {
 	text-align: center
 }
 
-tt, code, kbd, samp
+tt, code, kbd
 {
   display: inline-block;
 }
-tt, code, kbd, samp code
+tt, code, kbd
 {
   vertical-align: top;
 }
