issue #11314 "Copy to clipboard" button broken with XHTML

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -336,8 +336,7 @@ pre.fragment {
         opacity: 0;
         position: absolute;
         display: inline;
-        overflow: auto;
-        fill: var(--fragment-foreground-color);
+        overflow: hidden;
         justify-content: center;
         align-items: center;
         cursor: pointer;
@@ -349,7 +348,7 @@ pre.fragment {
 }
 
 .fragment:hover .clipboard, .clipboard.success {
-        opacity: .28;
+        opacity: .4;
 }
 
 .clipboard:hover, .clipboard.success {
