--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -11,9 +11,11 @@
 <link rel="icon" href="$relpath^$projecticon" type="image/x-icon" />
 <!--END PROJECT_ICON-->
 <link href="$relpath^tabs.css" rel="stylesheet" type="text/css"/>
-<!--BEGIN FULL_SIDEBAR-->
+<!--BEGIN DISABLE_INDEX-->
+  <!--BEGIN FULL_SIDEBAR-->
 <script type="text/javascript">var page_layout=1;</script>
-<!--END FULL_SIDEBAR-->
+  <!--END FULL_SIDEBAR-->
+<!--END DISABLE_INDEX-->
 <script type="text/javascript" src="$relpath^jquery.js"></script>
 <script type="text/javascript" src="$relpath^dynsections.js"></script>
 <!--BEGIN COPY_CLIPBOARD-->
@@ -27,9 +29,11 @@ $darkmode
 $extrastylesheet
 </head>
 <body>
-<!--BEGIN FULL_SIDEBAR-->
+<!--BEGIN DISABLE_INDEX-->
+  <!--BEGIN FULL_SIDEBAR-->
 <div id="side-nav" class="ui-resizable side-nav-resizable"><!-- do not remove this div, it is closed by doxygen! -->
-<!--END FULL_SIDEBAR-->
+  <!--END FULL_SIDEBAR-->
+<!--END DISABLE_INDEX-->
 
 <div id="top"><!-- do not remove this div, it is closed by doxygen! -->
 
