--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -16,6 +16,7 @@
 <!--END FULL_SIDEBAR-->
 <script type="text/javascript" src="$relpath^jquery.js"></script>
 <script type="text/javascript" src="$relpath^dynsections.js"></script>
+<script type="text/javascript" src="$relpath^build_date.js"></script>
 <!--BEGIN COPY_CLIPBOARD-->
 <script type="text/javascript" src="$relpath^clipboard.js"></script>
 <!--END COPY_CLIPBOARD-->
