--- a/templates/html/navtree.css
+++ b/templates/html/navtree.css
@@ -155,6 +155,10 @@
   opacity:0.9;
 }
 
+#nav-path ul {
+  border-top: 1px solid var(--nav-breadcrumb-separator-color);
+}
+
 @media print
 {
   #nav-tree { display: none; }
