Restyle fixed menu (HTML_DYNAMIC_MENUS=NO)

--- a/templates/html/darkmode_settings.css
+++ b/templates/html/darkmode_settings.css
@@ -95,6 +95,7 @@
 --nav-menu-background-color: ##04;
 --nav-menu-foreground-color: #BBBBBB;
 --nav-menu-active-bg: ##20;
+--nav-menu-active-color: ##D0;
 --nav-menu-toggle-color: rgba(255, 255, 255, 0.2);
 --nav-arrow-color: ##40;
 --nav-arrow-selected-color: ##A0;
