--- a/templates/html/lightmode_settings.css
+++ b/templates/html/lightmode_settings.css
@@ -95,6 +95,7 @@
 --nav-menu-background-color: white;
 --nav-menu-foreground-color: #555555;
 --nav-menu-active-bg: ##F0;
+--nav-menu-active-color: ##AA;
 --nav-menu-toggle-color: rgba(255, 255, 255, 0.5);
 --nav-arrow-color: ##AA;
 --nav-arrow-selected-color: ##AA;
